--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body class="body">
     <!--Головний блок-->
-    <header class="header">
+    <header class="header container">
         <nav class="header-nav">
           <a href="/" class="header__logo logo link" lang="en"
           ><span class="header__accent--blue">Web</span
@@ -222,12 +222,12 @@
             <li class="team__item item">
               <img
                 class="team__img"
-                srcset="./images/team/product_designer_450_m.jpg 450w, 
-                        ./images/team/product_designer_900_m.jpg 900w, 
-                        ./images/team/product_designer_354_t.jpg 354w, 
-                        ./images/team/product_designer_708_t.jpg 708w,
-                        ./images/team/product_designer_270_d.jpg 270w, 
-                        ./images/team/product_designer_540_d.jpg 540w"
+                srcset="../images/team/product_designer_450_m.jpg 450w, 
+                        ../images/team/product_designer_900_m.jpg 900w, 
+                        ../images/team/product_designer_354_t.jpg 354w, 
+                        ../images/team/product_designer_708_t.jpg 708w,
+                        ../images/team/product_designer_270_d.jpg 270w, 
+                        ../images/team/product_designer_540_d.jpg 540w"
                 sizes="(min-width: 1200px) 270px, 
                        (min-width: 768px) 354px, 
                        (min-width: 480px) 450px, 100vw"
