--- a/index.html
+++ b/index.html
@@ -29,17 +29,25 @@
           <!-- mobile menu -->
           <button 
           type="button" 
-          class="header__button--mobmenu is-open" 
+          class="menu-toggle js-open-menu" 
           aria-expanded="false"
-          aria-controls="menu__container" 
+          aria-controls="mobile-menu" 
           data-menu-button>
             <svg width="24" height="16" aria-label="Переключатель мобільного меню">
-              <use class="header-nav__icon--open" href="./images/header/symbol-mob_menu.svg#icon-close_mob_menu"></use>
-              <use class="header-nav__icon--close" href="./images/header/symbol-mob_menu.svg#icon-mob_menu"></use>
+              <use class="header-nav__icon--open" href="./images/header/symbol-mob_menu.svg#icon-mob_menu"></use>
+              
               </svg>
           </button>
-          <div class="mobile-menu__container" id="menu__container" data-menu>
-         
+
+          <div class="menu__container js-menu-container" id="mobile-menu" >
+            <button 
+            type="button" 
+            class="menu-toggle js-close-menu">
+              <svg width="24" height="16" aria-label="Переключатель мобільного меню">
+                <use class="header-nav__icon--close" href="./images/header/symbol-mob_menu.svg#icon-close_mob_menu"></use>
+                </svg>
+            </button>
+         <div class="mobile-content">
         <div class="navigation">
            <ul class="header-nav__list items">
             <li class="header-nav__item item">
@@ -92,6 +100,7 @@
             </li>
 
           </ul>
+        </div>
         </div>
       </div>
     </nav>
@@ -620,7 +629,14 @@
     </div>
     <script src="./js/modal.js"></script>
 
-
+<!-- мобільне  меню -->
+<script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/menu.js"></script>
 
     <!-- Форма -->
   <script>
