--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="js/menu.js"></script>
+    <script defer src="./js/menu.js"></script>
 
     <!-- Форма -->
   <script>
@@ -652,7 +652,7 @@
         });
     })();
   </script>
-  <script src="./js/menu.js"></script>
+ 
   </body>
 </html>
 
