--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
           type="button" 
           class="menu-toggle js-open-menu" 
           aria-expanded="false"
-          aria-controls="mobile-menu" 
-          data-menu-button>
+          aria-controls="mobile-menu">
             <svg width="24" height="16" aria-label="Переключатель мобільного меню">
-              <use class="header-nav__icon--open" href="./images/header/symbol-mob_menu.svg#icon-mob_menu"></use>
-              
+              <use class="header-nav__icon--open" href="./images/header/symbol-mob_menu.svg#icon-mob_menu"></use>    
               </svg>
           </button>
 
