--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="menu__container js-menu-container" id="mobile-menu" >
             <button 
             type="button" 
-            class="menu-toggle js-close-menu">
+            class="menu-toggle--close js-close-menu">
               <svg width="24" height="16" aria-label="Переключатель мобільного меню">
                 <use class="header-nav__icon--close" href="./images/header/symbol-mob_menu.svg#icon-close_mob_menu"></use>
                 </svg>
