--- a/portfolio.html
+++ b/portfolio.html
@@ -36,18 +36,16 @@
         type="button" 
         class="menu-toggle js-open-menu" 
         aria-expanded="false"
-        aria-controls="mobile-menu" 
-        data-menu-button>
+        aria-controls="mobile-menu">
           <svg width="24" height="16" aria-label="Переключатель мобільного меню">
-            <use class="header-nav__icon--open" href="./images/header/symbol-mob_menu.svg#icon-mob_menu"></use>
-            
+            <use class="header-nav__icon--open" href="./images/header/symbol-mob_menu.svg#icon-mob_menu"></use>    
             </svg>
         </button>
 
         <div class="menu__container js-menu-container" id="mobile-menu" >
           <button 
           type="button" 
-          class="menu-toggle js-close-menu">
+          class="menu-toggle--close js-close-menu">
             <svg width="24" height="16" aria-label="Переключатель мобільного меню">
               <use class="header-nav__icon--close" href="./images/header/symbol-mob_menu.svg#icon-close_mob_menu"></use>
               </svg>
@@ -497,5 +495,15 @@
         </div>
       </div>
     </footer>
+
+<!-- мобільне  меню -->
+<script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/menu.js"></script>
+
   </body>
 </html>
